--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - env: 
-        VITE_APIKEY: ${{ secrets.VITE_APIKEY }}
+      env: 
+          VITE_APIKEY: ${{ secrets.VITE_APIKEY }}
