--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,15 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+    - name: Install deps
+      run: npm ci
+    - name: Build project
+      run: npm run build --if-present
       env: 
           VITE_APIKEY: ${{ secrets.VITE_APIKEY }}
+    - name: Upload build files
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        name: production-files
+        path: ./dist
+    
