--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,12 +61,12 @@ jobs:
         with:
           name: production-files
           path: ./dist
-      - name: Checkout
-        uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./dist
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
